# MachineVisionWin

./: .gitignore  CMakeLists.txt  README.md  finger.cpp  fingervein.cpp  handvein.cpp  palm.cpp  palmvein.cpp  ~$识别算法报告.docx
Finger/: CMakeLists.txt
Finger/include/: Finger.h
Finger/src/: enhance_finger_vein.cpp  get.cpp
FingerVein/: CMakeLists.txt
FingerVein/include/: Finger.h
FingerVein/src/: find_finger_edge.cpp  find_knuckle.cpp  finger_match.cpp  match.cpp  preprocessing.cpp  rotate_finger.cpp  show.cpp  spilt_finger_vein.cpp
FrangiFilter/: CMakeLists.txt  main.cpp
FrangiFilter/src/: frangi.cpp
Hand/: CMakeLists.txt
Hand/include/: Hand.h
Hand/src/: enhance_hand_vein.cpp  get.cpp  hand_match.cpp  hand_roi.cpp  show.cpp  spilt_hand_vein.cpp
Hessian/: CMakeLists.txt
Hessian/include/: frangi.h
Hessian/src/: frangi.cpp
Palm/: CMakeLists.txt
Palm/include/: Palm.h
Palm/src/: get.cpp  hand_roi.cpp  spilt_palm_vein.cpp
PalmVein/: CMakeLists.txt
PalmVein/include/: Palm.h
PalmVein/src/: enhance_palm_vein.cpp  hand_roi.cpp  palm_match.cpp  show.cpp  spilt_palm_vein.cpp
cmakeDebug/: CMakeCache.txt  Makefile  cmake_install.cmake
cmakeDebug/FingerVein/: Makefile  cmake_install.cmake
cmakeDebug/FrangiFilter/: Makefile  cmake_install.cmake
cmakeDebug/PalmVein/: Makefile  cmake_install.cmake
cmakeRelease/: CMakeCache.txt  Makefile  cmake_install.cmake
cmakeRelease/FingerVein/: Makefile  cmake_install.cmake
cmakeRelease/FrangiFilter/: Makefile
cmakeRelease/PalmVein/: Makefile  cmake_install.cmake
debug/: CMakeCache.txt  Makefile  cmake_install.cmake
debug/Finger/: Makefile  cmake_install.cmake
debug/FrangiFilter/: Makefile
debug/Palm/: Makefile
